# crawlr

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  publish.yml
crawlr/: __init__.py  alerts.py  anomaly.py  api.py  archive.py  canvas.py  cli.py  config.py  currency.py  db.py  detect.py  digest.py  doctor.py  eval.py  extractor.py  fallback.py  fetcher.py  identity.py  llm.py  models.py  monitor.py  normalize.py  providers.py  scheduler.py  schemas.py  selector_cache.py  simplifier.py  storage.py  strategies.py  structured.py  telegram.py  triggers.py  usage.py  validate.py
crawlr/golden/: cases.yaml  jobs_list.html  product_jsonld.html  product_microdata.html  product_opengraph.html
crawlr/presets/: jobs.yaml  news.yaml  real_estate.yaml
crawlr/verticals/: __init__.py  ecommerce.py
docs/: DEMO.md  demo.tape
examples/: README.md  api_client.py  quotes.yaml  watch_competitors.sh
tests/: conftest.py  fixtures.py  test_accuracy.py  test_alert_sinks.py  test_alerts.py  test_alerts_v2.py  test_analytics.py  test_anomaly.py  test_api_auth.py  test_archive.py  test_block_detection.py  test_canvas.py  test_cli_manage.py  test_consensus.py  test_currency.py  test_dashboard.py  test_dashboard_v2.py  test_detect.py  test_digest.py  test_doctor.py  test_engine.py  test_eval_gate.py  test_fallbacks.py  test_identity.py  test_insights.py  test_llm_cost.py  test_monitor_async.py  test_network_errors.py  test_normalize.py  test_plausibility.py  test_postgres_smoke.py  test_presets.py  test_provenance.py  test_providers.py  test_rendering.py  test_retention.py  test_scheduler_digest.py  test_schemas.py  test_site_overrides.py  test_stats_and_eval.py  (+6 more)
web/: app.js  docs.html  index.html  styles.css
