[project]
name = "crawlr"
version = "0.1.0"
description = "Crawlr: an AI-powered, self-healing web scraper with an e-commerce price-intelligence vertical"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
]

[project.optional-dependencies]
js = ["playwright>=1.44"]
dev = ["pytest>=8.2", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
crawlr = "crawlr.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crawlr"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
