[project]
name = "crawlr"
version = "0.8.0"
description = "Crawlr: an AI-powered, self-healing web scraper with an e-commerce price-intelligence vertical"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Ard Tree" }]
keywords = [
    "web-scraping",
    "scraper",
    "price-monitoring",
    "price-intelligence",
    "ecommerce",
    "self-healing",
    "cli",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "tenacity>=8.3",
    "playwright>=1.44",
]

[project.optional-dependencies]
# `js` is kept for backwards compatibility: JS rendering ships by default now,
# so `pip install crawlr` already includes the headless browser engine.
js = ["playwright>=1.44"]
postgres = ["psycopg[binary]>=3.1", "psycopg-pool>=3.2"]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/ardfaiyaz/crawlr"
Repository = "https://github.com/ardfaiyaz/crawlr"
Issues = "https://github.com/ardfaiyaz/crawlr/issues"

[project.scripts]
crawlr = "crawlr.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crawlr"]

[tool.hatch.build.targets.sdist]
include = ["/crawlr", "/README.md", "/LICENSE", "/pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
# Gradual-typing gate: catch real bugs without demanding full annotation.
ignore_missing_imports = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
